# AdventOfCode2024

./: Cargo.toml
inputs/: 14a.in  18a.in  18a_example.in
src/: 01a.rs  01b.rs  02a.rs  02b.rs  03a.rs  03b.rs  04a.rs  04b.rs  05a.rs  05b.rs  06a.rs  06b.rs  07a.rs  07b.rs  08a.rs  08b.rs  09a.rs  09b.rs  10a.rs  10b.rs  11a.rs  11b.rs  12a.rs  12b.rs  13a.rs  13b.rs  14a.rs  14b.rs  15a.rs  15b.rs  16a.rs  16b.rs  17a.rs  17b.rs  18a.rs  18b.rs  19a.rs  19b.rs  20a.rs  20b.rs  (+10 more)
