[package]
name = "AdventOfCode2024"
version = "0.1.0"
authors = ["Mateusz Kwapich <mateusz@kwapich.it>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
maplit = "1.0.2"
multiset = "0.0.5"
regex = "1.11.1"
itertools = "0.13.0"
text_io = "0.1.12"
scan-rules = { version = "0.2.0", features = ["regex"] }
mset = "0.1.1"
serde_json = "1.0"
serde = { version = "1.0.150", features = ["derive"] }
smallset = "0.1.1"
rayon = "1.5"
radix_fmt = "1.0.0"
num = "0.4.1"
gray-codes = "0.1.1"
multimap = "0.10.0"
strum = { version = "0.26", features = ["derive"] }
memoize = "0.4.1"
fixedbitset = "0.5.7"

[[bin]]
name = "01a"
path = "src/01a.rs"

[[bin]]
name = "01b"
path = "src/01b.rs"
